Fixed the render errors on tablets

--- a/src/mobile/css/app.css
+++ b/src/mobile/css/app.css
@@ -87,7 +87,8 @@ Canvas
 canvas.map {
 	width: 100%;
 	height: 100%;
-	border: 1px solid red;
+	border: 0;
+	padding: 20px;
 	transition: all 1s ease-in-out;
 }
 
